minor overflow bug change

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -15,6 +15,7 @@
 
 		.Home__name {
 			font-size: 4rem;
+			width: 30rem;
 			font-weight: 900;
 		}
 	}
